<resources>
    <string name="app_name">FamilyMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="life_events_open">LIFE EVENTS   v</string>
    <string name="life_events_closed">LIFE EVENTS   ></string>
    <string name="family_open">FAMILY v</string>
    <string name="family_closed">FAMILY ></string>
    <string name="last_name">Last Name:</string>
    <string name="gender">Gender:</string>
    <string name="placeholder">placeholder</string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="event_information_will_display_here">Event information will display here</string>
    <string name="search">Search</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="map_type">Map Type</string>
    <string name="re_sync_data">Re-sync Data</string>
    <string name="logout">Logout</string>
    <string name="server_host">Server Host:</string>
    <string name="_10_0_2_2">10.0.2.2</string>
    <string name="server_port">Server Port:</string>
    <string name="user_name">User Name:</string>
    <string name="_8080">8080</string>
    <string name="jimbo">Jimbo</string>
    <string name="jmcgee_aol_com">JMcGee@aol.com</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="mcgee">McGee</string>
    <string name="last_name_form">Last Name</string>
    <string name="email">Email:</string>
    <string name="name">jimbo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
</resources>
