<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingsActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/life_story_lines"


                android:textSize="14sp" />

            <Spinner
                android:id="@+id/lifeStoryDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <Switch
                android:id="@+id/lifeStorySwitch"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/family_tree_lines"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/familyTreeDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/familyTreeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/spouse_lines"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spouseLinesDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/spouseLinesSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/map_type"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/mapTypeDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="ReSync">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/re_sync_data"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="Logout">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>