<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PersonActivity">

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="145dp"
                android:layout_column="0"
                android:text="@string/first_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/personFirstName"
                android:layout_width="278dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/personLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/personGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lifeEventRecyclerView"
        android:layout_width="390dp"
        android:layout_height="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border_black"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/familyMembersRecyclerView"
        android:layout_width="387dp"
        android:layout_height="182dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border_black"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="ToggleEventListVisibility"
        android:text="@string/life_events_open"
        android:textColor="#E91E63"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout3"
        app:layout_constraintStart_toStartOf="@+id/tableLayout3"
        app:layout_constraintTop_toTopOf="@+id/tableLayout3"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="TogglePersonListVisibility"
        android:text="@string/family_open"
        android:textColor="#E91E63"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout3"
        app:layout_constraintStart_toStartOf="@+id/tableLayout3"
        app:layout_constraintTop_toBottomOf="@+id/lifeEventRecyclerView"
        app:layout_constraintVertical_bias="0.075" />
</android.support.constraint.ConstraintLayout>